--- a/activities/templates/activities/installer.html
+++ b/activities/templates/activities/installer.html
@@ -19,7 +19,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
-<link rel="stylesheet" href="http://bootswatch.com/flatly/bootstrap.min.css" type="text/css">
+<link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.csss" type="text/css">
 <link rel="stylesheet"
 	href="http://www.w3schools.com/lib/w3-theme-black.css">
 <link rel="stylesheet"
