--- a/templates/rest_framework/api.html
+++ b/templates/rest_framework/api.html
@@ -2,7 +2,7 @@
 
 
 {% block bootstrap_theme %}
-    <link rel="stylesheet" href="http://bootswatch.com/flatly/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css" type="text/css">
 {% endblock %}
 
 {% block bootstrap_navbar_variant %}{% endblock %}
