frontend: metrics info json pretty view

--- a/frontend/scss/_custom.scss
+++ b/frontend/scss/_custom.scss
@@ -1,8 +1,5 @@
 // Here you can add other styles
-/*
-.card_fixed_len {
-  max-width: 20rem;
-}*/
-.custom-progressbar {
 
+.tab-margin {
+  margin-top: 2em;
 }
