--- a/frontend/scss/_custom.scss
+++ b/frontend/scss/_custom.scss
@@ -3,3 +3,16 @@
 .tab-margin {
   margin-top: 2em;
 }
+
+.metric-tile {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+  transition: box-shadow 0.3s ease-in-out;
+}
+
+.metric-tile:hover {
+  transform: scale(1.1);
+  min-width: 150px;
+  position: absolute;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  margin: 0 auto;
+}
