--- a/templates/dash_react.html
+++ b/templates/dash_react.html
@@ -3,9 +3,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Innometrics - Dashboard</title>
+    <title>Innometrics</title>
   </head>
-  <body class="app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden">
+  <body class="header-fixed sidebar-fixed">
     <script type="text/javascript">
       var view_page = "{{ view_page }}";
       var user_name = "{{user.get_username}}";
