frontend: redirect if 401 error

--- a/templates/dash_react.html
+++ b/templates/dash_react.html
@@ -18,6 +18,7 @@
       {% if anchor %}
           window.location = "#/{{ anchor }}";
       {% endif %}
+      var csrf = "{{ csrf_token }}";
     </script>
     <div id="root"></div>
     {% render_bundle 'index' %}
