backend, frontend: metric value trend

--- a/frontend/scss/_custom.scss
+++ b/frontend/scss/_custom.scss
@@ -18,6 +18,10 @@
   margin: 0 auto;
 }
 
+//.metric-tile-trend {
+//  text-shadow: 0 0 2px #000000;
+//}
+
 #banner-wrapper {
   width: 100%;
   padding: 10em;
